# Hlidskjalf

./: .dockerignore  .gitignore  CHANGELOG.md  CLAUDE.md  Dockerfile  PR-plan-normalize.md  README.md  docker-compose.yml  flake.nix  handoff.md  hlidskjalf.env.example  plan.md
backend/: hlidskjalf.env.example  pyproject.toml
backend/hlidskjalf/: __init__.py  accumulator.py  auth.py  config.py  db.py  deps.py  journal.py  main.py  migrations.py  netzone.py  pangolin.py  probe.py  pve.py  secretbox.py  switch.py
backend/hlidskjalf/datasources/: base.py  prometheus.py  rrd.py
backend/hlidskjalf/routes/: bandwidth.py  console.py  debug.py  metrics.py  provision.py  rescue.py  settings.py  setup.py  switch.py  update.py  users.py  version.py  vms.py
backend/tests/: conftest.py  test_access_control.py  test_accumulator.py  test_auth.py  test_authz_scoping.py  test_bandwidth.py  test_console.py  test_fresh_clone.py  test_gitignore.py  test_hardening.py  test_migrations.py  test_nix_module.py  test_nix_package.py  test_pangolin.py  test_pangolin_user_sync.py  test_prometheus.py  test_provision.py  test_public_exposure.py  test_pve_connection.py  test_pve_pinning.py  test_rescue.py  test_safety.py  test_secretbox.py  test_security.py  test_security_headers.py  test_security_v036.py  test_settings.py  test_setup.py  test_switch.py  test_update.py  test_users.py  test_validator_privs.py  test_version.py  test_vms.py
dev/: dev.env.example  mock_pangolin.py  mock_prometheus.py  mock_pve.py  mock_switch.crt  mock_switch.key  mock_switch.py
docs/: bootstrap.md  dev-against-real-proxmox.md  (+7 more)
(+65 files in other folders)
