[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "hlidskjalf"
version = "0.4.1-alpha"
description = "Hlidskjalf — self-hosted, multi-user Proxmox VE control panel"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn>=0.30",
    "httpx>=0.27",
    "websockets>=13.0",
    "aiosqlite>=0.20",
    "argon2-cffi>=23.1",
    "pydantic-settings>=2.4",
    "itsdangerous>=2.2",
    "cryptography>=42.0",  # encryption at rest for stored secrets (secretbox.py)
]

[project.optional-dependencies]
test = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",

    "python-multipart>=0.0.9",  # form parsing in dev/mock_pve.py
]

[project.scripts]
hlidskjalf = "hlidskjalf.main:run"

[tool.hatch.build.targets.wheel]
packages = ["hlidskjalf"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
